fixed naming conventions and added all required code

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Austin Mutter's Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+<header class="topbar">
+    <h1 class="title">Austin Mutter's Portfolio</h1>
+</header>
 
+<main id="stage" class="stage" aria-label="Layer stage"></main>
+
+<footer class="bottombar" aria-label="Index tracker">
+    <div id="tracker" class="tracker"></div>
+</footer>
+
+<script src="app.js" type="module"></script>
 </body>
 </html>
